--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-asgiref @ file:///tmp/build/80754af9/asgiref_1625643473416/work
+asgiref
 certifi==2021.10.8
-Django @ file:///tmp/build/80754af9/django_1625585912945/work
-joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
+Django
+joblib
 mkl-fft==1.3.1
-mkl-random @ file:///C:/ci/mkl_random_1626186184278/work
+mkl-random
 mkl-service==2.4.0
-numpy @ file:///C:/ci/numpy_and_numpy_base_1634106873763/work
-psycopg2 @ file:///C:/ci/psycopg2_1612298803839/work
+numpy
+psycopg2
 pytz==2021.3
-scikit-learn @ file:///C:/ci/scikit-learn_1635188126022/work
-scipy @ file:///C:/ci/scipy_1630606942584/work
-six @ file:///tmp/build/80754af9/six_1623709665295/work
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
+scikit-learn
+scipy
+six
+sqlparse
+threadpoolctl
+typing-extensions
 wincertstore==0.2
