--- a/environment.yml
+++ b/environment.yml
@@ -1,126 +1,151 @@
 name: td_toolkits
 channels:
+  - plotly
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - anyio=2.2.0=py37haa95532_2
-  - argcomplete=1.12.3=pyhd3eb1b0_0
-  - argon2-cffi=20.1.0=py37h2bbff1b_1
+  - anyio=3.4.0=py38haa244fe_0
+  - argon2-cffi=21.1.0=py38h294d835_2
   - asgiref=3.4.1=pyhd8ed1ab_0
-  - async_generator=1.10=py37h28b3542_0
-  - attrs=21.2.0=pyhd3eb1b0_0
-  - babel=2.9.1=pyhd3eb1b0_0
-  - backcall=0.2.0=pyhd3eb1b0_0
+  - async_generator=1.10=py_0
+  - attrs=21.2.0=pyhd8ed1ab_0
+  - autopep8=1.5.7=pyhd3eb1b0_0
+  - babel=2.9.1=pyh44b312d_0
+  - backcall=0.2.0=py_0
   - blas=1.0=mkl
-  - bleach=4.0.0=pyhd3eb1b0_0
-  - bottleneck=1.3.2=py37h2a96729_1
-  - brotlipy=0.7.0=py37h2bbff1b_1003
+  - bleach=4.1.0=pyhd8ed1ab_0
+  - brotlipy=0.7.0=py38h294d835_1003
   - ca-certificates=2021.10.8=h5b45459_0
-  - certifi=2021.10.8=py37h03978a9_1
-  - cffi=1.15.0=py37h2bbff1b_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - colorama=0.4.4=pyhd3eb1b0_0
-  - cryptography=35.0.0=py37h71e12ea_0
-  - debugpy=1.5.1=py37hd77b12b_0
-  - decorator=5.1.0=pyhd3eb1b0_0
-  - defusedxml=0.7.1=pyhd3eb1b0_0
+  - certifi=2021.10.8=py38haa244fe_1
+  - cffi=1.15.0=py38hd8c33c5_0
+  - charset-normalizer=2.0.8=pyhd8ed1ab_0
+  - colorama=0.4.4=py_0
+  - cryptography=36.0.0=py38hb7941b4_0
+  - debugpy=1.5.1=py38h885f38d_0
+  - decorator=4.4.2=py_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
   - django=3.2.9=pyhd8ed1ab_0
   - django-extensions=3.1.5=pyhd8ed1ab_0
-  - entrypoints=0.3=py37_0
-  - et_xmlfile=1.1.0=py37haa95532_0
-  - icc_rt=2019.0.0=h0cc432a_1
-  - idna=3.3=pyhd3eb1b0_0
-  - importlib-metadata=4.8.2=py37haa95532_0
-  - importlib_metadata=4.8.2=hd3eb1b0_0
-  - intel-openmp=2021.4.0=haa95532_3556
-  - ipykernel=6.4.1=py37haa95532_1
-  - ipython=7.29.0=py37hd4e2768_0
-  - ipython_genutils=0.2.0=pyhd3eb1b0_1
-  - jedi=0.18.0=py37haa95532_1
-  - jinja2=3.0.2=pyhd3eb1b0_0
-  - joblib=1.1.0=pyhd3eb1b0_0
-  - json5=0.9.6=pyhd3eb1b0_0
-  - jsonschema=3.2.0=pyhd3eb1b0_2
-  - jupyter_client=7.0.6=pyhd3eb1b0_0
-  - jupyter_core=4.9.1=py37haa95532_0
-  - jupyter_server=1.4.1=py37haa95532_0
-  - jupyterlab=3.2.1=pyhd3eb1b0_1
-  - jupyterlab_pygments=0.1.2=py_0
-  - jupyterlab_server=2.8.2=pyhd3eb1b0_0
+  - django-multiselectfield=0.1.12=pyhd8ed1ab_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - idna=3.1=pyhd3deb0d_0
+  - importlib-metadata=4.8.2=py38haa244fe_0
+  - importlib_resources=5.4.0=pyhd8ed1ab_0
+  - ipykernel=6.4.1=py38haa95532_1
+  - ipython=7.29.0=py38h595d716_2
+  - ipython_genutils=0.2.0=py38_0
+  - jedi=0.18.0=py38haa95532_1
+  - jinja2=3.0.3=pyhd8ed1ab_0
+  - json5=0.9.5=pyh9f0ad1d_0
+  - jsonschema=4.2.1=pyhd8ed1ab_0
+  - jupyter_client=7.1.0=pyhd8ed1ab_0
+  - jupyter_core=4.9.1=py38haa244fe_1
+  - jupyter_server=1.12.0=pyhd8ed1ab_0
+  - jupyterlab=3.2.4=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jupyterlab_server=2.8.2=pyhd8ed1ab_0
+  - libsodium=1.0.18=h8d14728_1
   - m2w64-gcc-libgfortran=5.3.0=6
   - m2w64-gcc-libs=5.3.0=7
   - m2w64-gcc-libs-core=5.3.0=7
   - m2w64-gmp=6.1.0=2
   - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markupsafe=2.0.1=py37h2bbff1b_0
-  - matplotlib-inline=0.1.2=pyhd3eb1b0_2
-  - mistune=0.8.4=py37hfa6e2cd_1001
-  - mkl=2021.4.0=haa95532_640
-  - mkl-service=2.4.0=py37h2bbff1b_0
-  - mkl_fft=1.3.1=py37h277e83a_0
-  - mkl_random=1.2.2=py37hf11a4ad_0
+  - markupsafe=2.0.1=py38h294d835_1
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mistune=0.8.4=py38h294d835_1005
+  - mkl_fft=1.3.1=py38h277e83a_0
+  - mkl_random=1.2.2=py38hf11a4ad_0
   - msys2-conda-epoch=20160418=1
-  - nbclassic=0.2.6=pyhd3eb1b0_0
-  - nbclient=0.5.3=pyhd3eb1b0_0
-  - nbconvert=6.1.0=py37haa95532_0
-  - nbformat=5.1.3=pyhd3eb1b0_0
-  - nest-asyncio=1.5.1=pyhd3eb1b0_0
-  - notebook=6.4.6=py37haa95532_0
-  - numexpr=2.7.3=py37hb80d3ca_1
-  - numpy=1.21.2=py37hfca59bb_0
-  - numpy-base=1.21.2=py37h0829f74_0
-  - openpyxl=3.0.9=pyhd3eb1b0_0
+  - nbclassic=0.3.4=pyhd8ed1ab_0
+  - nbclient=0.5.9=pyhd8ed1ab_0
+  - nbconvert=6.3.0=py38haa244fe_1
+  - nbformat=5.1.3=pyhd8ed1ab_0
+  - nest-asyncio=1.5.1=pyhd8ed1ab_0
+  - notebook=6.4.6=pyha770c72_0
+  - numpy-base=1.21.2=py38h0829f74_0
   - openssl=1.1.1l=h8ffe710_0
-  - packaging=21.3=pyhd3eb1b0_0
-  - pandas=1.3.4=py37h6214cd6_0
-  - pandocfilters=1.4.3=py37haa95532_1
-  - parso=0.8.2=pyhd3eb1b0_0
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pip=21.2.4=py37haa95532_0
-  - plotly=5.4.0=pyhd8ed1ab_0
-  - prometheus_client=0.12.0=pyhd3eb1b0_0
-  - prompt-toolkit=3.0.20=pyhd3eb1b0_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.10.0=pyhd3eb1b0_0
-  - pyopenssl=21.0.0=pyhd3eb1b0_1
-  - pyparsing=3.0.4=pyhd3eb1b0_0
-  - pyrsistent=0.18.0=py37h196d8e1_0
-  - pysocks=1.7.1=py37_1
-  - python=3.7.11=h6244533_0
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python_abi=3.7=2_cp37m
-  - pytz=2021.3=pyhd3eb1b0_0
-  - pywin32=228=py37hbaba5e8_1
-  - pywinpty=0.5.7=py37_0
-  - pyzmq=22.3.0=py37hd77b12b_2
-  - requests=2.26.0=pyhd3eb1b0_0
-  - scikit-learn=1.0.1=py37hf11a4ad_0
-  - scipy=1.7.1=py37hbe87c03_2
-  - send2trash=1.8.0=pyhd3eb1b0_1
-  - setuptools=58.0.4=py37haa95532_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandas=1.1.3=py38ha925a31_0
+  - pandoc=2.16.2=h8ffe710_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.0=py_0
+  - pickleshare=0.7.5=py38_1000
+  - pip=21.0.1=py38haa95532_0
+  - plotly=5.4.0=py_0
+  - prometheus_client=0.12.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.8=py_0
+  - pycodestyle=2.8.0=pyhd3eb1b0_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.7.1=py_0
+  - pyopenssl=21.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.6=pyhd8ed1ab_0
+  - pyrsistent=0.18.0=py38h294d835_0
+  - pysocks=1.7.1=py38haa244fe_4
+  - python=3.8.12=h6244533_0
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python_abi=3.8=2_cp38
+  - pytz=2021.3=pyhd8ed1ab_0
+  - pywin32=302=py38h294d835_2
+  - pywinpty=0.5.7=py38_0
+  - pyzmq=22.3.0=py38h09162b1_1
+  - requests=2.26.0=pyhd8ed1ab_1
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=58.0.4=py38haa95532_0
   - six=1.16.0=pyhd3eb1b0_0
-  - sniffio=1.2.0=py37haa95532_1
+  - sniffio=1.2.0=py38haa244fe_2
   - sqlite=3.36.0=h2bbff1b_0
-  - sqlparse=0.4.1=py_0
-  - tenacity=8.0.1=pyhd8ed1ab_0
-  - terminado=0.9.4=py37haa95532_0
-  - testpath=0.5.0=pyhd3eb1b0_0
-  - threadpoolctl=2.2.0=pyh0d69192_0
-  - tornado=6.1=py37h2bbff1b_0
-  - traitlets=5.1.1=pyhd3eb1b0_0
-  - typing_extensions=3.10.0.2=pyh06a4308_0
-  - urllib3=1.26.7=pyhd3eb1b0_0
+  - sqlparse=0.4.2=pyhd8ed1ab_0
+  - tenacity=8.0.1=py38haa95532_0
+  - terminado=0.9.4=py38haa95532_0
+  - testpath=0.5.0=pyhd8ed1ab_0
+  - toml=0.10.2=pyhd3eb1b0_0
+  - tornado=6.1=py38h294d835_2
+  - traitlets=5.0.5=py_0
+  - typing_extensions=4.0.0=pyha770c72_0
+  - urllib3=1.26.7=pyhd8ed1ab_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - webencodings=0.5.1=py37_1
+  - wcwidth=0.2.5=py_0
+  - webencodings=0.5.1=py_1
+  - websocket-client=1.2.1=py38haa244fe_0
   - wheel=0.37.0=pyhd3eb1b0_1
-  - win_inet_pton=1.1.0=py37haa95532_0
-  - wincertstore=0.2=py37haa95532_2
+  - win_inet_pton=1.1.0=py38haa244fe_3
+  - wincertstore=0.2=py38haa95532_2
   - winpty=0.4.3=4
-  - xlsxwriter=3.0.2=pyhd3eb1b0_0
-  - zipp=3.6.0=pyhd3eb1b0_0
+  - xlsxwriter=3.0.2=pyhd8ed1ab_0
+  - zeromq=4.3.4=h0e60522_1
+  - zipp=3.6.0=pyhd8ed1ab_0
   - pip:
-    - django-picklefield==3.0.1
+    - chardet==4.0.0
+    - django-excel==0.0.10
+    - django-filter==21.1
+    - dpcpp-cpp-rt==2021.4.0
+    - et-xmlfile==1.1.0
     - fontawesomefree==5.15.4
-prefix: D:\Opt\Anaconda\envs\td_toolkits
+    - intel-cmplr-lib-rt==2021.4.0
+    - intel-cmplr-lic-rt==2021.4.0
+    - intel-opencl-rt==2021.4.0
+    - intel-openmp==2021.4.0
+    - joblib==1.1.0
+    - lml==0.1.0
+    - mkl==2021.4.0
+    - mkl-fft==1.3.1
+    - mkl-service==2.4.0
+    - numpy==1.21.4
+    - openpyxl==3.0.9
+    - psycopg2==2.9.1
+    - pyexcel==0.6.7
+    - pyexcel-io==0.6.5
+    - pyexcel-webio==0.1.4
+    - pyexcel-xls==0.7.0
+    - pyexcel-xlsx==0.6.0
+    - scikit-learn==1.0.1
+    - scipy==1.7.2
+    - tbb==2021.4.0
+    - texttable==1.6.4
+    - threadpoolctl==3.0.0
+    - typing-extensions==3.10.0.2
+    - xlrd==2.0.1
+    - xlwt==1.3.0
+prefix: F:\opt\anaconda\envs\td_toolkits
