--- a/environment.yml
+++ b/environment.yml
@@ -1,121 +1,119 @@
 name: td_toolkits
 channels:
   - plotly
-  - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - anyio=3.4.0=py38haa244fe_0
-  - argon2-cffi=21.1.0=py38h294d835_2
-  - asgiref=3.4.1=pyhd8ed1ab_0
-  - async_generator=1.10=py_0
-  - attrs=21.2.0=pyhd8ed1ab_0
+  - anyio=3.5.0=py38haa244fe_0
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py38h294d835_1
+  - asgiref=3.5.0=pyhd8ed1ab_0
+  - attrs=21.4.0=pyhd8ed1ab_0
   - autopep8=1.5.7=pyhd3eb1b0_0
   - babel=2.9.1=pyh44b312d_0
-  - backcall=0.2.0=py_0
-  - blas=1.0=mkl
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - backports.zoneinfo=0.2.1=py38h294d835_4
   - bleach=4.1.0=pyhd8ed1ab_0
   - brotlipy=0.7.0=py38h294d835_1003
   - ca-certificates=2021.10.8=h5b45459_0
   - certifi=2021.10.8=py38haa244fe_1
   - cffi=1.15.0=py38hd8c33c5_0
-  - charset-normalizer=2.0.8=pyhd8ed1ab_0
-  - colorama=0.4.4=py_0
-  - cryptography=36.0.0=py38hb7941b4_0
+  - charset-normalizer=2.0.12=pyhd8ed1ab_0
+  - colorama=0.4.4=pyh9f0ad1d_0
+  - cryptography=36.0.0=py38h21b164f_0
   - debugpy=1.5.1=py38h885f38d_0
-  - decorator=4.4.2=py_0
+  - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
-  - django=3.2.9=pyhd8ed1ab_0
+  - django=4.0.2=py38haa244fe_0
   - django-extensions=3.1.5=pyhd8ed1ab_0
   - django-multiselectfield=0.1.12=pyhd8ed1ab_0
-  - entrypoints=0.3=pyhd8ed1ab_1003
-  - idna=3.1=pyhd3deb0d_0
-  - importlib-metadata=4.8.2=py38haa244fe_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - flit-core=3.6.0=pyhd8ed1ab_0
+  - idna=3.3=pyhd8ed1ab_0
+  - importlib-metadata=4.11.1=py38haa244fe_0
   - importlib_resources=5.4.0=pyhd8ed1ab_0
-  - ipykernel=6.4.1=py38haa95532_1
+  - ipykernel=6.9.1=py38h595d716_0
   - ipython=7.29.0=py38h595d716_2
-  - ipython_genutils=0.2.0=py38_0
-  - jedi=0.18.0=py38haa95532_1
+  - ipython_genutils=0.2.0=py_1
+  - jedi=0.18.1=py38haa244fe_0
   - jinja2=3.0.3=pyhd8ed1ab_0
   - json5=0.9.5=pyh9f0ad1d_0
-  - jsonschema=4.2.1=pyhd8ed1ab_0
-  - jupyter_client=7.1.0=pyhd8ed1ab_0
-  - jupyter_core=4.9.1=py38haa244fe_1
-  - jupyter_server=1.12.0=pyhd8ed1ab_0
+  - jsonschema=4.4.0=pyhd8ed1ab_0
+  - jupyter_client=7.1.2=pyhd8ed1ab_0
+  - jupyter_core=4.9.2=py38haa244fe_0
+  - jupyter_server=1.13.5=pyhd8ed1ab_0
   - jupyterlab=3.2.4=pyhd8ed1ab_0
   - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
-  - jupyterlab_server=2.8.2=pyhd8ed1ab_0
+  - jupyterlab_server=2.10.3=pyhd8ed1ab_0
+  - libblas=3.9.0=13_win64_mkl
+  - libcblas=3.9.0=13_win64_mkl
+  - liblapack=3.9.0=13_win64_mkl
   - libsodium=1.0.18=h8d14728_1
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markupsafe=2.0.1=py38h294d835_1
+  - markupsafe=2.1.0=py38h294d835_0
   - matplotlib-inline=0.1.3=pyhd8ed1ab_0
   - mistune=0.8.4=py38h294d835_1005
-  - mkl_fft=1.3.1=py38h277e83a_0
-  - mkl_random=1.2.2=py38hf11a4ad_0
-  - msys2-conda-epoch=20160418=1
-  - nbclassic=0.3.4=pyhd8ed1ab_0
-  - nbclient=0.5.9=pyhd8ed1ab_0
-  - nbconvert=6.3.0=py38haa244fe_1
+  - nbclassic=0.3.5=pyhd8ed1ab_0
+  - nbclient=0.5.11=pyhd8ed1ab_0
+  - nbconvert=6.4.2=py38haa244fe_0
   - nbformat=5.1.3=pyhd8ed1ab_0
-  - nest-asyncio=1.5.1=pyhd8ed1ab_0
-  - notebook=6.4.6=pyha770c72_0
-  - numpy-base=1.21.2=py38h0829f74_0
-  - openssl=1.1.1l=h8ffe710_0
+  - nest-asyncio=1.5.4=pyhd8ed1ab_0
+  - notebook=6.4.8=pyha770c72_0
+  - openssl=3.0.0=h8ffe710_2
   - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.1.3=py38ha925a31_0
-  - pandoc=2.16.2=h8ffe710_0
+  - pandas=1.4.1=py38h5d928e2_0
+  - pandoc=2.17.1.1=h57928b3_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parso=0.8.0=py_0
-  - pickleshare=0.7.5=py38_1000
-  - pip=21.0.1=py38haa95532_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
+  - pip=22.0.3=pyhd8ed1ab_0
   - plotly=5.4.0=py_0
-  - prometheus_client=0.12.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.8=py_0
-  - pycodestyle=2.8.0=pyhd3eb1b0_0
+  - prometheus_client=0.13.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.27=pyha770c72_0
+  - pycodestyle=2.8.0=pyhd8ed1ab_0
   - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.7.1=py_0
-  - pyopenssl=21.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.6=pyhd8ed1ab_0
-  - pyrsistent=0.18.0=py38h294d835_0
+  - pygments=2.11.2=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.7=pyhd8ed1ab_0
+  - pyrsistent=0.18.1=py38h294d835_0
   - pysocks=1.7.1=py38haa244fe_4
-  - python=3.8.12=h6244533_0
+  - python=3.8.12=h900ac77_2_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-tzdata=2021.5=pyhd8ed1ab_0
   - python_abi=3.8=2_cp38
   - pytz=2021.3=pyhd8ed1ab_0
-  - pywin32=302=py38h294d835_2
-  - pywinpty=0.5.7=py38_0
+  - pywin32=303=py38h294d835_0
+  - pywinpty=2.0.2=py38hd3f51b4_0
   - pyzmq=22.3.0=py38h09162b1_1
-  - requests=2.26.0=pyhd8ed1ab_1
+  - requests=2.27.1=pyhd8ed1ab_0
   - send2trash=1.8.0=pyhd8ed1ab_0
-  - setuptools=58.0.4=py38haa95532_0
-  - six=1.16.0=pyhd3eb1b0_0
+  - setuptools=60.9.3=py38haa244fe_0
+  - six=1.16.0=pyh6c4a22f_0
   - sniffio=1.2.0=py38haa244fe_2
-  - sqlite=3.36.0=h2bbff1b_0
+  - sqlite=3.37.0=h8ffe710_0
   - sqlparse=0.4.2=pyhd8ed1ab_0
-  - tenacity=8.0.1=py38haa95532_0
-  - terminado=0.9.4=py38haa95532_0
+  - tenacity=8.0.1=pyhd8ed1ab_0
+  - terminado=0.13.1=py38haa244fe_0
   - testpath=0.5.0=pyhd8ed1ab_0
-  - toml=0.10.2=pyhd3eb1b0_0
+  - toml=0.10.2=pyhd8ed1ab_0
   - tornado=6.1=py38h294d835_2
-  - traitlets=5.0.5=py_0
-  - typing_extensions=4.0.0=pyha770c72_0
-  - urllib3=1.26.7=pyhd8ed1ab_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wcwidth=0.2.5=py_0
+  - traitlets=5.1.1=pyhd8ed1ab_0
+  - typing_extensions=4.1.1=pyha770c72_0
+  - tzdata=2021e=he74cb21_0
+  - ucrt=10.0.20348.0=h57928b3_0
+  - urllib3=1.26.8=pyhd8ed1ab_1
+  - vc=14.2=hb210afc_6
+  - vs2015_runtime=14.29.30037=h902a5da_6
+  - wcwidth=0.2.5=pyh9f0ad1d_2
   - webencodings=0.5.1=py_1
-  - websocket-client=1.2.1=py38haa244fe_0
-  - wheel=0.37.0=pyhd3eb1b0_1
+  - websocket-client=1.2.3=pyhd8ed1ab_0
+  - wheel=0.37.1=pyhd8ed1ab_0
   - win_inet_pton=1.1.0=py38haa244fe_3
-  - wincertstore=0.2=py38haa95532_2
   - winpty=0.4.3=4
   - xlsxwriter=3.0.2=pyhd8ed1ab_0
   - zeromq=4.3.4=h0e60522_1
-  - zipp=3.6.0=pyhd8ed1ab_0
+  - zipp=3.7.0=pyhd8ed1ab_1
   - pip:
     - chardet==4.0.0
     - django-excel==0.0.10
